sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Toilet__c/Fresh_Fit_Toilet__c.object-meta.xml
<CustomObject>
    <description>Basic details of Fresh Fit toilets.</description>
    <label>Fresh Fit Toilet</label>
    <nameField>
        <label>Fresh Fit Toilet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fresh Fit Toilets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>