sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Toilet__c/fields/Fresh_Fit_GPS_coordinates__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Fit_GPS_coordinates__c</fullName>
    <label>Fresh Fit GPS coordinates</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>