sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Toilet__c/fields/Launch_date__c.field-meta.xml
<CustomField>
    <fullName>Launch_date__c</fullName>
    <label>Launch date</label>
    <type>Date</type>
</CustomField>