sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Toilet__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Fresh Fit Toilets</relationshipLabel>
    <relationshipName>Fresh_Fit_Toilets</relationshipName>
    <type>Lookup</type>
</CustomField>