sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Toilet__c/fields/Plot_number__c.field-meta.xml
<CustomField>
    <fullName>Plot_number__c</fullName>
    <description>Identification for the plot where the Fresh Fit toilet is</description>
    <inlineHelpText>Identification for the plot where the Fresh Fit toilet is</inlineHelpText>
    <label>Plot number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>